# chip8

./: .gitignore  Cargo.toml  README.md  app.rs  chip8.rs  main.rs
Ref/: links.txt
chip8/: display.rs  instruction_decoder.rs  keyboard.rs  memory.rs  registers.rs  thread_messages.rs  timers.rs
refrences/: Cowgod's Chip-8 Technical Reference.html
